# parallel_kmeans

./: .gitignore  CMakeLists.txt  README.md  k_means.cpp  k_means.h  kmeans_euclidean.cpp  kmeans_euclidean.h  main.cpp  mnist.py  sbatch_kmeans.sh
data/: mnist-images.txt  mnist-labels.txt
results/: display.py
